<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Terms_ConditionsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/delivery_tool7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#239B56"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:title="Terms &amp; Conditions"
        app:titleTextAppearance="@style/AppTheme"
        app:titleTextColor="@color/white" />

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/tool"-->
<!--        android:background="#2874A6">-->
<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--        <ImageView-->
<!--            android:layout_width="35dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:id="@+id/image"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:tint="@color/white"-->
<!--            android:src="@drawable/ic_baseline_close_24"/>-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/tool_text"-->
<!--            android:text="Terms &amp; Conditions "-->
<!--            android:textSize="17sp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_toRightOf="@id/image"/>-->


<!--        </RelativeLayout>-->
<!--    </androidx.appcompat.widget.Toolbar>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/delivery_tool7">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text"
                android:text="Flipkart Terms of Use"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window"
                android:layout_below="@id/text"
                android:layout_marginTop="10dp"
                android:text="@string/text_window"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window1"
                android:layout_below="@id/text_window"
                android:layout_marginTop="10dp"
                android:text="@string/text_window1"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window2"
                android:layout_below="@id/text_window1"
                android:layout_marginTop="10dp"
                android:text="@string/text_window2"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text2"
                android:text="Membership Eligibility"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window2"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window3"
                android:layout_below="@id/text2"
                android:layout_marginTop="10dp"
                android:text="@string/text_window3"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text3"
                android:text="Your Account and Registration Obligations "
                android:textColor="@color/black"
                android:layout_below="@+id/text_window3"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window4"
                android:layout_below="@id/text3"
                android:layout_marginTop="10dp"
                android:text="@string/text_window4"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window5"
                android:layout_below="@id/text_window4"
                android:layout_marginTop="10dp"
                android:text="@string/text_window5"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window6"
                android:layout_below="@id/text_window5"
                android:layout_marginTop="10dp"
                android:text="@string/text_window5"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window7"
                android:layout_below="@id/text_window6"
                android:layout_marginTop="10dp"
                android:text="@string/text_window5"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text4"
                android:text="Communications "
                android:textColor="@color/black"
                android:layout_below="@+id/text_window7"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window8"
                android:layout_below="@id/text4"
                android:layout_marginTop="10dp"
                android:text="@string/text_window6"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text5"
                android:text="Platform for Transaction and Communication "
                android:textColor="@color/black"
                android:layout_below="@+id/text_window8"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window9"
                android:layout_below="@id/text5"
                android:layout_marginTop="10dp"
                android:text="@string/text_window6"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window10"
                android:layout_below="@id/text_window9"
                android:layout_marginTop="10dp"
                android:text="@string/text_window8"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window11"
                android:layout_below="@id/text_window10"
                android:layout_marginTop="10dp"
                android:text="@string/text_window9"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window12"
                android:layout_below="@id/text_window11"
                android:layout_marginTop="10dp"
                android:text="@string/text_window9"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window13"
                android:layout_below="@id/text_window12"
                android:layout_marginTop="10dp"
                android:text="@string/text_window9"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window14"
                android:layout_below="@id/text_window13"
                android:layout_marginTop="10dp"
                android:text="@string/text_window9"
                android:layout_marginLeft="10dp"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/text_window15"
            android:layout_below="@id/text_window14"
            android:layout_marginTop="10dp"
            android:text="@string/text_window9"
            android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text6"
                android:text="Charges"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window15"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window16"
                android:layout_below="@id/text6"
                android:layout_marginTop="10dp"
                android:text="@string/text_window10"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text7"
                android:text="Use of the Platform"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window16"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window17"
                android:layout_below="@id/text7"
                android:layout_marginTop="10dp"
                android:text="@string/text_window10"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text8"
                android:text="Contents Posted on Platform"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window17"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window18"
                android:layout_below="@id/text8"
                android:layout_marginTop="10dp"
                android:text="@string/text_window11"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window19"
                android:layout_below="@id/text_window18"
                android:layout_marginTop="10dp"
                android:text="@string/text_window11"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window20"
                android:layout_below="@id/text_window19"
                android:layout_marginTop="10dp"
                android:text="@string/text_window11"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window21"
                android:layout_below="@id/text_window20"
                android:layout_marginTop="10dp"
                android:text="@string/text_window11"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text9"
                android:text="Contents Posted on Platform"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window21"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window22"
                android:layout_below="@id/text9"
                android:layout_marginTop="10dp"
                android:text="@string/text_window12"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text10"
                android:text="Disclaimer of Warranties and Liability"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window22"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window23"
                android:layout_below="@id/text10"
                android:layout_marginTop="10dp"
                android:text="@string/text_window12"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text11"
                android:text="Selling"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window23"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window24"
                android:layout_below="@id/text11"
                android:layout_marginTop="10dp"
                android:text="@string/text_window12"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text12"
                android:text="Selling"
                android:textColor="@color/black"
                android:layout_below="@+id/text_window24"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_window25"
                android:layout_below="@id/text12"
                android:layout_marginTop="10dp"
                android:text="@string/text_window10"
                android:layout_marginLeft="10dp"/>








        </RelativeLayout>
    </ScrollView>

</RelativeLayout>